@@ -847,6 +847,10 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) minAreaRect,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::fitEllipse",
+        (Tcl_ObjCmdProc *) fitEllipse,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::boxPoints",
         (Tcl_ObjCmdProc *) boxPoints,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
