@@ -3423,6 +3423,70 @@ int minAreaRect(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
 }
 
 
+int fitEllipse(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    std::vector<cv::Point> points;
+    cv::RotatedRect rect;
+    Tcl_Obj *pResultStr = NULL;
+    int count = 0;
+
+    if (objc != 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "contour");
+        return TCL_ERROR;
+    }
+
+    if (Tcl_ListObjLength(interp, objv[1], &count) != TCL_OK) {
+        Tcl_SetResult(interp, (char *) "fitEllipse invalid contour data", TCL_STATIC);
+        return TCL_ERROR;
+    }
+
+    if (count%2 != 0) {
+        Tcl_SetResult(interp, (char *) "fitEllipse invalid points data", TCL_STATIC);
+        return TCL_ERROR;
+    } else {
+        Tcl_Obj *elemListPtr = NULL;
+        int number_from_list_x;
+        int number_from_list_y;
+        int npts;
+
+        npts = count / 2;
+        for (int i = 0, j = 0; j < npts; i = i + 2, j = j + 1) {
+            cv::Point point;
+            Tcl_ListObjIndex(interp, objv[1], i, &elemListPtr);
+            if (Tcl_GetIntFromObj(interp, elemListPtr, &number_from_list_x) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            Tcl_ListObjIndex(interp, objv[1], i + 1, &elemListPtr);
+            if (Tcl_GetIntFromObj(interp, elemListPtr, &number_from_list_y) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            point.x = number_from_list_x;
+            point.y = number_from_list_y;
+            points.push_back (point);
+        }
+    }
+
+    try {
+        rect = cv::fitEllipse(points);
+    } catch (...) {
+        Tcl_SetResult(interp, (char *) "fitEllipse failed", TCL_STATIC);
+        return TCL_ERROR;
+    }
+
+    pResultStr = Tcl_NewListObj(0, NULL);
+    Tcl_ListObjAppendElement(NULL, pResultStr, Tcl_NewIntObj( (int) rect.center.x));
+    Tcl_ListObjAppendElement(NULL, pResultStr, Tcl_NewIntObj( (int) rect.center.y));
+    Tcl_ListObjAppendElement(NULL, pResultStr, Tcl_NewIntObj( (int) rect.size.width));
+    Tcl_ListObjAppendElement(NULL, pResultStr, Tcl_NewIntObj( (int) rect.size.height));
+    Tcl_ListObjAppendElement(NULL, pResultStr, Tcl_NewIntObj( (int) rect.angle));
+
+    Tcl_SetObjResult(interp, pResultStr);
+    return TCL_OK;
+}
+
+
 int boxPoints(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
 {
     cv::Mat points;
