@@ -1,3 +1,7 @@
+2021-09-12 Danilo Chang
+
+	* Implement command: fitEllipse
+
 2021-09-11 Danilo Chang
 
 	* Add flag --with-sift to enable/disable SIFT command code
